launchpad-buildd (184) UNRELEASED; urgency=medium

  * Adjust sbuildrc to handle various changes in bionic's sbuild.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 09 Dec 2019 10:58:32 +0000

launchpad-buildd (183) xenial; urgency=medium

  [ Michael Hudson-Doyle ]
  * Invoke dmsetup with sudo when calculating the device major number for
    device mapper.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 26 Nov 2019 20:43:38 +0000

launchpad-buildd (182) xenial; urgency=medium

  [ Michael Hudson-Doyle ]
  * Do not make assumptions about what device major number the device mapper
    is using. (LP: #1852518) 

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 26 Nov 2019 12:22:37 +0000

launchpad-buildd (181) xenial; urgency=medium

  [ Robert C Jennings ]
  * LXD: Create dm-X devices to address kpartx hangs (LP: #1852518)

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 22 Nov 2019 11:14:04 +0000

launchpad-buildd (180) xenial; urgency=medium

  * No-change release to work around production upgrade problem.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 06 Nov 2019 11:11:43 +0000

launchpad-buildd (179) xenial; urgency=medium

  [ Dimitri John Ledkov ]
  * Add core20 to the list of supported core_snap_names. LP: #1849687

  [ Colin Watson ]
  * Simplify most conditional Python 2/3 imports using six.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 30 Oct 2019 14:26:42 +0000

launchpad-buildd (178) xenial; urgency=medium

  * Accept an "extra_snaps" entry in livefs arguments, which is passed to
    livecd-rootfs to configure ubuntu-image to include additional snaps.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 02 Oct 2019 12:59:03 +0100

launchpad-buildd (177) xenial; urgency=medium

  * Fix recipe building to not rely on /CurrentlyBuilding existing in base
    images (LP: #1841075).

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 23 Aug 2019 10:57:13 +0100

launchpad-buildd (176) xenial; urgency=medium

  * Don't rely on /CurrentlyBuilding existing in base images.
